; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_PRCMSlowClkCtrFastGet.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_PRCMSlowClkCtrFastGet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HIB1P2_BASE = common dso_local global i64 0, align 8
@HIB1P2_O_HIB_RTC_TIMER_MSW_1P2 = common dso_local global i64 0, align 8
@HIB1P2_O_HIB_RTC_TIMER_LSW_1P2 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @PRCMSlowClkCtrFastGet() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @HIB1P2_BASE, align 8
  %3 = load i64, i64* @HIB1P2_O_HIB_RTC_TIMER_MSW_1P2, align 8
  %4 = add nsw i64 %2, %3
  %5 = call i64 @HWREG(i64 %4)
  store i64 %5, i64* %1, align 8
  %6 = load i64, i64* %1, align 8
  %7 = shl i64 %6, 32
  store i64 %7, i64* %1, align 8
  %8 = load i64, i64* @HIB1P2_BASE, align 8
  %9 = load i64, i64* @HIB1P2_O_HIB_RTC_TIMER_LSW_1P2, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i64 @HWREG(i64 %10)
  %12 = load i64, i64* %1, align 8
  %13 = or i64 %12, %11
  store i64 %13, i64* %1, align 8
  %14 = load i64, i64* %1, align 8
  ret i64 %14
}

declare dso_local i64 @HWREG(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
